--- a/cfa-conseil/resources/css/tiptap/editor-content.css
+++ b/cfa-conseil/resources/css/tiptap/editor-content.css
@@ -2,42 +2,42 @@
   font-size: 2.25rem;   /* ~36px */
   font-weight: 700;
   line-height: 1.2;
-  margin-bottom: 0.5rem;
+  margin: 0.5rem 0;
 }
 
 .editor-content h2 {
   font-size: 1.875rem;  /* ~30px */
   font-weight: 600;
   line-height: 1.3;
-  margin-bottom: 0.5rem;
+  margin: 0.5rem 0;
 }
 
 .editor-content h3 {
   font-size: 1.5rem;    /* ~24px */
   font-weight: 600;
   line-height: 1.3;
-  margin-bottom: 0.5rem;
+  margin: 0.5rem 0;
 }
 
 .editor-content h4 {
   font-size: 1.25rem;   /* ~20px */
   font-weight: 600;
   line-height: 1.4;
-  margin-bottom: 0.5rem;
+  margin: 0.5rem 0; 
 }
 
 .editor-content h5 {
   font-size: 1.125rem;  /* ~18px */
   font-weight: 500;
   line-height: 1.4;
-  margin-bottom: 0.5rem;
+  margin: 0.5rem 0;
 }
 
 .editor-content h6 {
   font-size: 1rem;      /* ~16px */
   font-weight: 500;
   line-height: 1.5;
-  margin-bottom: 0.5rem;
+  margin: 0.5rem 0;
 }
 
 .editor-content img {
